add ru_RU locale

--- a/synchro/templates/synchro.html
+++ b/synchro/templates/synchro.html
@@ -21,7 +21,7 @@
     <br>{% trans 'Last synchro time' %}: {{ last }}.
     <br><br><input type="submit" name="synchro" value="{% trans 'Synchronize' %}">
     <br><br>
-    <a href="reset/">{% trans "Reset synchronize" %}</a>
+    <a href="reset/" onclick="return confirm('{% trans "All added/updated/deleted models will not be synchronized after this action! Ok?" %}')">{% trans "Reset synchronization" %}</a>
 </form>
 </div>
 {% endblock %}
